# pubic.multi-platform-to-postgres

./: .env.sample  .gitignore  pyproject.toml  readme.md  run.sh  scheduler.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/wrike/: proposal_durations.sql  quote_durations.sql
pipelines/pipeline_hubspot_to_postgres/: config.yml  requirements.txt  run.sh
pipelines/pipeline_hubspot_to_postgres/runner/: __init__.py
pipelines/pipeline_hubspot_to_postgres/tap_hubspot/: __init__.py  config.py  fetch.py  object-config.json  utility.py
pipelines/pipeline_hubspot_to_postgres/tap_hubspot/schemas/: calls.json  companies.json  contacts.json  deals.json  engagements.json  engagements_companies.json  engagements_contacts.json  form_submissions.json  forms.json  goals.json  marketings.json  owners.json  teams.json
pipelines/pipeline_wrike_to_postgres/: config.yml  format.sh  requirements.txt  run.sh
pipelines/pipeline_wrike_to_postgres/runner/: __init__.py
pipelines/pipeline_wrike_to_postgres/tap_wrike/: __init__.py  config.py  fetch.py  internal.py  utility.py
pipelines/pipeline_wrike_to_postgres/tap_wrike/schemas/: auditLogs.json  contacts.json  contacts_profiles.json  tasks.json  timeLogs.json
pipelines/pipeline_xero_to_postgres/: .gitignore  config.yml  requirements.txt  run.sh
pipelines/pipeline_xero_to_postgres/runner/: __init__.py
pipelines/pipeline_xero_to_postgres/tap_xero/: __init__.py  config.py  fetch.py  internal.py  utility.py
pipelines/pipeline_xero_to_postgres/tap_xero/schemas/: budgets.json  budgets_lines.json  (+2 more)
